--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Harpreet's blog",
-  "short_name": "Harpreet's blog",
+  "name": "Harpreet Singh",
+  "short_name": "Harpreet Singh",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
